hphp/hack/test/typecheck/inout/bad_inout_use_call3.php.exp
File "bad_inout_use_call3.php", line 13, characters 11-23:
Invalid argument to an inout parameter (Typing[4110])
File "bad_inout_use_call3.php", line 3, characters 33-35:
This is an int
File "bad_inout_use_call3.php", line 7, characters 18-25:
It is incompatible with an array key (int/string)
